# LibwebRtcDemo

./: .gitmodules  CMakeLists.txt  README.md  WebRTC 入门连接.md  WebReceiverView.qml  _line244.txt  android_hw_video_decoder_factory.cpp  android_hw_video_decoder_factory.h  android_mediacodec_video_decoder.cpp  android_mediacodec_video_decoder.h  android_native_video_frame_buffer.cpp  android_native_video_frame_buffer.h  cwebrtcbridge.cpp  cwebrtcbridge.h  encoded_tracking_bridge.cpp  encoded_tracking_bridge.h  latency_trace.cpp  latency_trace.h  main.cpp  main.qml  sender.py  server.js  signaling_client.cpp  signaling_client.h  video_decode_sink_timing_bridge.cpp  video_decode_sink_timing_bridge.h  video_frame_sink.h  webchannel_websocket_transport.cpp  webchannel_websocket_transport.h  webreceiver.html  webrtc_factory_helper.cpp  webrtc_factory_helper.h  webrtc_oes_video_frame_buffer.h  webrtc_receiver_client.cpp  webrtc_receiver_client.h  webrtc_video_renderer.cpp  webrtc_video_renderer.h  webrtc_webview_receiver.cpp  webrtc_webview_receiver.h  webrtcwrapper.cpp  (+2 more)
.qtcreator/: CMakeLists.txt.user.1870668  CMakeLists.txt.user.56f654e
android/: AndroidManifest.xml
build-codex-desktop/: CMakeCache.txt
build-desktop-test/: CMakeCache.txt
docs/: LibWebRTC 库编译.docx  WebRTC 入门连接.md  WebRTC 技术预研可行性及实施方案评审V1.0.0.docx  WebRTC 技术预研可行性及实施方案评审V1.0.1.docx  WebRTC 技术预研可行性及实施方案评审V1.1.0.docx  WebRTC实施过程.docx  current-renderer-latency-baseline.md  display-latency-investigation-plan.md  gstreamer-migration-outline.md  libmediastream设计方案.md  pre_research_tracking.xlsx  receive-frame-to-glass-timeline.md  sdk-release-acceptance-checklist.md  video-receive-latency-table-v2.md  webrtc-signaling-sequence.html  webrtc-signaling-sequence.md  低延迟视频推流技术预研-任务分解-朱正清&金博1.2.0.xls  分析报告.xlsx  当虹BlackEye Vision产品测试报告.docx  预研项目综合跟踪表.xlsx
include/rflow/: librflow_common.h
scripts/: compare_render_logs.py
